[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/BossParts/OneOrgan.gd" type="Script" id=1]
[ext_resource path="res://Tiles/Bunker/organ_tentacle.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Bunker/organ_tentacle_1.png" type="Texture" id=3]
[ext_resource path="res://Tiles/Bunker/organ_tentacle_2.png" type="Texture" id=4]
[ext_resource path="res://Tiles/Bunker/organ_tentacle_deg.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.46299

[sub_resource type="CircleShape2D" id=3]
radius = 19.8722

[sub_resource type="CircleShape2D" id=4]
radius = 18.5982

[node name="soldier" type="KinematicBody2D"]
position = Vector2( 26.0913, -10.6208 )
rotation = 0.00589594
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="OrganS" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -0.212637, 0.132787 )
rotation = -0.00589594

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.310104, 0.864307 )
rotation = -0.0437058
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Hit" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="cosmicgoo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cosmicgoo"]
shape = SubResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Hit" to="." method="_on_Hit_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="cosmicgoo" to="." method="_on_cosmicgoo_area_entered"]
[connection signal="area_exited" from="cosmicgoo" to="." method="_on_cosmicgoo_area_exited"]
